src/test/compile-fail/infinite-tag-type-recursion.rs
// Copyright 2012 The Rust Project Developers. See the COPYRIGHT
// file at the top-level directory of this distribution and at
// http://rust-lang.org/COPYRIGHT.
//
// Licensed under the Apache License, Version 2.0 <LICENSE-APACHE or
// http://www.apache.org/licenses/LICENSE-2.0> or the MIT license
// <LICENSE-MIT or http://opensource.org/licenses/MIT>, at your
// option. This file may not be copied, modified, or distributed
// except according to those terms.


// error-pattern: illegal recursive enum type; wrap the inner value in a box

enum mlist { cons(int, mlist), nil, }

fn main() { let a = cons(10, cons(11, nil)); }
